raw/ARSYAD SETIAWAN MUHAMMAD 6410 245150207111052/2024-11-14-08-04-08.ceg/compilation.txt
NT.java:21: error: variable input is already defined in method main(String[])
        double[] input = input();
                 ^
NT.java:21: error: cannot find symbol
        double[] input = input();
                         ^
  symbol:   method input()
  location: class NT
2 errors
Not compiled
